[FIX] Chosen selector contrast issue on first item of a single-select list, on first load. Thanks, Marc.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@59125 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/less/tiki-bootstrap-chosen.less
+++ b/themes/base_files/less/tiki-bootstrap-chosen.less
@@ -73,6 +73,18 @@
 			&.active-result {
 				cursor: pointer;
 				display: list-item;
+				background-position-y: 50% !important;
+				&.result-selected {
+					display: list-item;
+					color: inherit; // @text-color;
+					&.highlighted {
+						color: spin(@chosen-background,180);
+					}
+				}
+				&:hover {
+					display: inherit;
+					color: spin(@chosen-background,180);
+				}
 			}
 
 			&.highlighted {
@@ -127,6 +139,8 @@
 		}
 	}
 }
+
+.chosen-container .chosen-results .active-result.highlighted { background-color: @link-color !important; }
 
 .chosen-container-single {
 	.chosen-single {
